jump-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jump-pod
spec:
  nodeSelector:
    lifecycle: spot
  containers:
  - name: jump-pod
    image: alpine:latest
    command:
    - sleep
    - "3600"
    imagePullPolicy: Always
    resources:
      limits:
        cpu: "1"
        memory: 1Gi
#    volumeMounts:
#    - name: valheim
#      mountPath: /valheim
#  volumes:
#  - name: valheim
#    persistentVolumeClaim:
#      claimName: valheim
