minecraft.yaml
#To reclaim PV: k patch pv pvc-bb65d73a-5b0c-4f10-a1fc-9053e60c910e -p '{"spec":{"claimRef": null}}'
#Then k apply -f minecraft.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minecraft
  namespace: minecraft
  name: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      nodeSelector:
        lifecycle: spot
      containers:
      - name: minecraft
        image: itzg/minecraft-server:latest
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 25565
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 25565
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - name: minecraft
          containerPort: 25565
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - name: minecraft
          mountPath: /data
      volumes:
      - name: minecraft
        persistentVolumeClaim:
          claimName: minecraft
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "25565"
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
  namespace: minecraft
  name: minecraft
spec:
  ports:
  - name: "25565"
    port: 25565
    protocol: TCP
    targetPort: 25565
  selector:
    app: minecraft
  type: LoadBalancer
