valheim.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: valheim
  namespace: valheim
  name: valheim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valheim
  template:
    metadata:
      labels:
        app: valheim
    spec:
      containers:
      - name: valheim
        image: mbround18/valheim:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2456
        - containerPort: 2457
        - containerPort: 2458
        resources:
          limits:
            cpu: 1
            memory: 3Gi
        volumeMounts:
        - name: valheim
          mountPath: /home/steam/.config/unity3d/IronGate/Valheim
          subPath: saves
        - name: valheim
          mountPath: /home/steam/valheim
          subPath: server
        - name: valheim
          mountPath: /home/steam/backups
          subPath: backups
      volumes:
      - name: valheim
        persistentVolumeClaim:
          claimName: valheim
---
apiVersion: v1
kind: Service
metadata:
  namespace: valheim
  name: valheim
spec:
  ports:
  - name: 2456
    port: 2456
    protocol: UDP
    targetPort: 2456
  - name: 2457
    port: 2457
    protocol: UDP
    targetPort: 2457
  - name: 2458
    port: 2458
    protocol: UDP
    targetPort: 2458
  selector:
    matchLabels:
      app: valheim
  type: ClusterIP
